--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,24 @@
 ---
 import { SITE_TITLE, SITE_LOGO } from "../config";
+import Navigation from "./Navigation.astro";
 ---
 
 <header
-  class="flex items-center justify-between py-6 max-w-5xl px-3 md:px-6 mx-auto"
+  class="flex items-center justify-between py-6 max-w-7xl px-3 md:px-5 mx-auto"
 >
   {
     SITE_LOGO ? (
-      <img src={SITE_LOGO} alt={SITE_TITLE} class="w-8 h-8" />
+      <div class="flex items-center">
+        <img
+          src={SITE_LOGO}
+          alt={SITE_TITLE}
+          class="w-8 h-8 inline-block pr-3"
+        />
+        <a href="/blog" class="text-xl">Reading The Tea Leaves</a>
+      </div>
     ) : (
-      <span class="text-xl font-bold">{SITE_TITLE}</span>
+      <span class="text-2xl font-serif">{SITE_TITLE}</span>
     )
   }
-  <nav>
-    <ul class="flex items-center justify-center space-x-4">
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/blog">Posts</a>
-      </li>
-    </ul>
-  </nav>
+  <Navigation />
 </header>
