--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -11,14 +11,14 @@ interface Props {
 const { href, title, desc, pubDate } = Astro.props;
 ---
 
-<li class="py-6">
+<li class="py-6 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl">
   <a href={`/blog/${href}`}>
     <div class="space-y-2 flex flex-col">
       <div>
         <div class="font-light text-sm">
           <FormattedDate date={pubDate} />
         </div>
-        <h2 transition:name={title}>{title}</h2>
+        <h2 class="text-slate-100" transition:name={title}>{title}</h2>
       </div>
       <p class="font-light text-slate-300">{desc}</p>
     </div>
