--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -19,8 +19,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       )
     }
     <div>
-      <div class="py-6 border-b border-zinc-800">
-        <h1 class="text-center text-4xl font-semibold" transition:name={title}>
+      <div class="border-b border-zinc-800">
+        <h1 class="text-center text-3xl font-light" transition:name={title}>
           {title}
         </h1>
         <div class="font-light text-sm text-center">
