--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 import PostCard from "../components/PostCard.astro";
 
 const posts = (await getCollection("blog")).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 
 const latestPost = posts.slice(0, 4);
@@ -14,13 +14,7 @@ const latestPost = posts.slice(0, 4);
 
 <MainLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
   <div class="py-6">
-    <div class="text-4xl max-w-lg font-medium py-16">
-      <h1
-        class="bg-gradient-to-r from-slate-100 to-slate-400 inline-block text-transparent bg-clip-text"
-      >
-        {SITE_TITLE} - {SITE_DESCRIPTION}
-      </h1>
-    </div>
+    <div class="text-4xl max-w-lg font-medium py-2"></div>
     <h2 class="text-2xl font-bold mb-4">Recent Posts</h2>
     <ul class="md:w-2/3">
       {
