--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,5 +6,8 @@
       <li>
         <a href="/portfolio">Portfolio</a>
       </li>
+      <li>
+        <a href="/terms">Terms</a>
+      </li>
     </ul>
 </nav>
