--- a/src/pages/terms/index.astro
+++ b/src/pages/terms/index.astro
@@ -7,7 +7,7 @@ import Layout from "../../layouts/MainLayout.astro";
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
   <section class="mt-8">
     <h1 class="text-2xl mt-4 mb-4 underline">Disclaimer </h1>
-    <p>The content provided on this blog is intended for informational purposes only and should not be construed as investment advice. Any market commentary, analysis, or opinions expressed herein are based on my personal interpretation of current market conditions and trends.
+    <p>The content provided within this blog is intended for informational purposes only and should not be construed as investment advice. Any market commentary, analysis, or opinions expressed herein are based on my personal interpretation of current market conditions and trends.
 
       It's important to note that I am not a licensed financial advisor, and the information presented here may not be suitable for your individual financial situation or investment objectives.
       
