read from static json

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import { SOCIALS } from "../config";
 import socialicons from "../socialicons";
 ---
@@ -16,4 +16,4 @@ import socialicons from "../socialicons";
       </a>
     ))
   }
-</div>
+</div> -->
