added industry and ideas-for-2024

--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -4,10 +4,12 @@ import Layout from "../../layouts/MainLayout.astro";
 
 import { PortfolioTable } from "../../components/PortfolioTable";
 import {calculateNetLiquidationValue, getPortfolioData, getStockStaticData} from "../../utils/utils";
+import { IndustryPieCharts} from "../../components/IndustryPieChart";
 
 
 const stockStaticData = await getStockStaticData();
 const portfolioData = await getPortfolioData();
+
 const cashDepositedInPortfolio = Object.values(portfolioData).reduce((sum, obj) => sum + obj.units * obj.averagePrice, 0);
 const netLiquidationValue = calculateNetLiquidationValue(portfolioData, stockStaticData)
 const paperGains = (netLiquidationValue - cashDepositedInPortfolio)
@@ -36,9 +38,15 @@ const returnsGainsClass = paperGains >=0 ?  'amount text-green-500' : 'amount te
         <p class=`${returnsGainsClass}`>{returns}%</p>
       </div>
     </div>
+    <IndustryPieCharts  client:load/>
+
     <PortfolioTable stockStaticData={stockStaticData} portfolioData={portfolioData} client:load />
+
   </section>
+
 </Layout>
+
+
 
 <style>
 
