--- a/src/components/PortfolioTable.css
+++ b/src/components/PortfolioTable.css
@@ -1,24 +1,27 @@
 .portfolio-table-container {
-  margin-top: 20px;
-  background-color: rgb(15, 15, 15); /* Dark background color */
-  padding: 20px; /* Add some padding for better spacing */
-  border-radius: 8px; /* Add some border radius for rounded corners */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add a subtle shadow for depth */
+    margin-top: 20px;
+    background-color: rgb(15, 15, 15);
+    /* Dark background color */
+    padding: 20px;
+    /* Add some padding for better spacing */
+    border-radius: 8px;
+    /* Add some border radius for rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    /* Add a subtle shadow for depth */
 }
 
 .table-scroll {
-  overflow-x: auto;
+    overflow-x: auto;
 }
 
 .portfolio-table {
-  width: 100%;
-  border-collapse: collapse;
+    width: 100%;
+    border-collapse: collapse;
 }
 
 .portfolio-table th,
 .portfolio-table td {
-  padding: 10px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
-
