--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -7,6 +7,10 @@ import {calculateNetLiquidationValue, portfolioData, } from "../../utils/utils";
 import { IndustryPieCharts} from "../../components/IndustryPieChart";
 
 
+import htmlContent from '../../../public/modified_positions_data_1708.htm?raw'
+
+
+
 const cashDepositedInPortfolio = portfolioData.reduce((acc, currVal) => { 
   if (currVal.symbol=="USD") { 
     return acc + currVal.closePrice*currVal.quantity
@@ -21,7 +25,7 @@ const returnsGainsClass = paperGains >=0 ?  'amount text-green-500' : 'amount te
 
 ---
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <section class="container mt-8">
+  <!-- <section class="container mt-8">
     <div class="portfolio-summary">
       <div class="summary-card">
         <h3>Cash Deposited</h3>
@@ -43,19 +47,19 @@ const returnsGainsClass = paperGains >=0 ?  'amount text-green-500' : 'amount te
 
     <PortfolioTable portfolioData={portfolioData} client:load />
 
-    <IndustryPieCharts  client:load/>
+    <IndustryPieCharts  client:load/> -->
 
-  </section>
-
+  <!-- </section> -->
+  <iframe srcdoc={htmlContent} width="100%" height="1024px" style="border: none;"></iframe>
 </Layout>
 
 
 
-<style>
+<!-- <style>
 
   /* Summary Card */
 .summary-card {
-  background-color: #1c1c1e;
+  /* background-color: #1c1c1e; */
   color: #fff;
   padding: 1rem;
   border-radius: 8px;
@@ -97,4 +101,4 @@ const returnsGainsClass = paperGains >=0 ?  'amount text-green-500' : 'amount te
 }
 
 
-</style>
+</style> -->
