--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -32,16 +32,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
           }
         </div>
       </div>
-      <article class="prose prose-invert prose-lg text-xl mx-auto max-w-full">
-        <style>
-          :global(.prose a) {
-            @apply text-blue-600 underline;
-          }
-          :global(.prose a:hover) {
-            @apply text-blue-700;
-          }
-        </style>
-
+      <article class="prose prose-invert prose-p:text-xl prose-a:text-blue-600 prose-strong:font-medium prose-p:text-justify prose-img:rounded-xl prose-headings:underline prose-headings:font-light mx-auto max-w-full">
         <slot />
       </article>
     </div>
