remove portfolio deets and fix footer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import Navigation from "./Navigation.astro";
           alt={SITE_TITLE}
           class="w-8 h-8 inline-block pr-3"
         />
-        <a href="/blog" class="text-xl">Reading The Tea Leaves</a>
+        {/* <a href="/blog" class="text-xl">Reading The Tea Leaves</a> */}
       </div>
     ) : (
       <span class="text-2xl font-serif">{SITE_TITLE}</span>
